--- a/src/components/header/burger/burger.scss
+++ b/src/components/header/burger/burger.scss
@@ -1,4 +1,5 @@
 .burger-wrapper {
+  position: fixed;
   display: flex;
   z-index: 1001;
 }
@@ -20,7 +21,7 @@
 }
 
 .icon-burger-conteiner {
-  height: 48px;
+  height: 55px;
   background-color: #2B3643;
 
   cursor: pointer;
@@ -45,6 +46,9 @@
     margin-left: 15px;
     margin-right: 10px;
 
+    .burger-icon-point {
+      width: 100%;
+    }
   }
 
   .burger-point {
