--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,14 +1,6 @@
 .header {
-  width: 100%;
+  flex: 0 0 auto;
   height: 55px;
-  position: fixed;
-  z-index: 1000;
 
   background-color: #2B3643;
-}
-
-.header-wrapper {
-  width: 100%;
-  height: 55px;
-  position: relative;
 }
