--- a/src/pages/test/test.scss
+++ b/src/pages/test/test.scss
@@ -1,4 +1,11 @@
-.a {
+.page-view {
   height: 100vh;
-  overflow: scroll;
+  display: flex;
+  flex-direction: column;
+}
+
+.a {  
+  flex-grow: 1;
+  overflow-y: scroll;
+  // display: none;
 }
