--- a/src/components/header/burger/burger.scss
+++ b/src/components/header/burger/burger.scss
@@ -8,8 +8,13 @@
   width: 200px;
   height: 100vh;
   position: relative;
-
+  
   background-color: #364150;
+  
+  a {
+    text-decoration: none;
+    color: #B4BCC8;
+  }
 }
 
 .burger-logo {
@@ -39,6 +44,7 @@
   display: flex;
   position: relative;
   align-items: center;
+
 
   .burger-icon-conteiner {
     width: 25px;
