--- a/src/pages/driverPageOrders/driverPageOrders.scss
+++ b/src/pages/driverPageOrders/driverPageOrders.scss
@@ -4,17 +4,16 @@
   flex-direction: column;
 }
 
-.header {
+.header-table {
   flex: 0 0 auto;
-  height: 55px;
 }
 
-.page-main {  
+.main-table {  
   flex-grow: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
-.footer {
+.footer-table {
   flex: 0 0 auto;
   width: 100%;
 }
